FIX overflow on tech stack

--- a/src/app/_components/chat/style.css
+++ b/src/app/_components/chat/style.css
@@ -35,7 +35,7 @@
 .chatbox--showtext {
   width: fit-content;
   height: fit-content;
-  padding: 10px 20px 12px 18px;
+  padding: 10px 20px;
   opacity: 1;
 }
 
